Replaces Arrays.asList by List.of.